tests/NormalTests/paczka1/fuzzy1/59245391.err
Error in line 4: GHCydO A912 78,O
Error in line 3: bgX1EAh S733 38,1
Error in line 6: OLl S453 19,5
Error in line 9: 83U S492 21,3
Error in line 17: BLi8q1vkYP A912 4,6
Error in line 23: A912 S453 34,1
Error in line 18: 83U S453 16,5
Error in line 19: BLi8q1vkYP S492 73,3
